syntax = "proto3";

package services.tasks_svc.v1;

import "libs/common/v1/conflict.proto";

option go_package = "gen/services/tasks-svc/v1";

//
// CreateWard
//

message CreateWardRequest {
  string name = 1; // @gotags: validate:"required"
}

message CreateWardResponse {
  string id = 1;
  string consistency = 2;
}

//
// GetWard
//

message GetWardRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message GetWardResponse {
  string id = 1;
  string name = 2;
  string consistency = 3;
}

//
// GetWards
//

message GetWardsRequest {}

message GetWardsResponse {
  repeated Ward wards = 1;

  message Ward {
    string id = 1;
    string name = 2;
    string consistency = 3;
  }
}

//
// GetRecentWards
//

message GetRecentWardsRequest {}

message GetRecentWardsResponse {
  repeated Ward wards = 1;

  message Ward {
    string id = 1;
    string name = 2;
    uint32 bed_count = 3;
    uint32 tasks_todo = 4;
    uint32 tasks_in_progress = 5;
    uint32 tasks_done = 6;
    string consistency = 7;
  }
}

//
// UpdateWard
//

message UpdateWardRequest {
  string id = 1; // @gotags: validate:"uuid4"
  optional string name = 2;
  optional string consistency = 3; // no conflict detection, if not provided
}

message UpdateWardResponse {
  optional libs.common.v1.Conflict conflict = 1;
  string consistency = 2;
}

//
// DeleteWard
//

message DeleteWardRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message DeleteWardResponse {}


message GetWardDetailsRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message GetWardDetailsResponse {
  string id = 1;
  string name = 2;
  repeated Room rooms = 3;
  repeated TaskTemplate task_templates = 4;
  string consistency = 5;

  message Bed {
    string id = 1;
    string name = 2;
    string consistency = 3;
  }

  message Subtask {
    string id = 1;
    string name = 2;
  }

  message Room {
    string id = 1;
    string name = 2;
    repeated Bed beds = 3;
    string consistency = 4;
  }

  message TaskTemplate {
    string id = 1;
    string name = 2;
    repeated Subtask subtasks = 3;
    string consistency = 4;
  }
}


//
// GetWardsOverview
//

message GetWardOverviewsRequest {}

message GetWardOverviewsResponse {
  repeated Ward wards = 1;

  message Ward {
    string id = 1;
    string name = 2;
    uint32 bed_count = 3;
    uint32 tasks_todo = 4;
    uint32 tasks_in_progress = 5;
    uint32 tasks_done = 6;
    string consistency = 7;
  }
}

//
// WardService
//

service WardService {
  rpc CreateWard (CreateWardRequest) returns (CreateWardResponse) {}
  rpc GetWard (GetWardRequest) returns (GetWardResponse) {}
  rpc GetWards(GetWardsRequest) returns (GetWardsResponse) {}
  rpc GetRecentWards(GetRecentWardsRequest) returns (GetRecentWardsResponse) {}
  rpc UpdateWard (UpdateWardRequest) returns (UpdateWardResponse) {}
  rpc DeleteWard (DeleteWardRequest) returns (DeleteWardResponse) {}
  rpc GetWardDetails (GetWardDetailsRequest) returns (GetWardDetailsResponse) {}
  rpc GetWardOverviews (GetWardOverviewsRequest) returns (GetWardOverviewsResponse) {}
}
